infra/kubernetes/base/risk-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: risk-service
  namespace: nexus-prod
  labels:
    app: risk-service
    app.kubernetes.io/part-of: nexustreasury
spec:
  replicas: 2
  selector:
    matchLabels:
      app: risk-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: risk-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9090"
        vault.hashicorp.com/agent-inject: "true"
        vault.hashicorp.com/role: "risk-service"
    spec:
      serviceAccountName: risk-service
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001
        seccompProfile:
          type: RuntimeDefault
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: risk-service
      containers:
        - name: risk-service
          image: ghcr.io/manassehkafoh/nexustreasury/risk-service:latest
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
          ports:
            - name: http
              containerPort: 4003
            - name: metrics
              containerPort: 9090
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 800m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /health/live
              port: 4003
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 4003
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: tmp
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: risk-service
  namespace: nexus-prod
spec:
  selector:
    app: risk-service
  ports:
    - name: http
      port: 80
      targetPort: 4003
    - name: metrics
      port: 9090
      targetPort: 9090
