infra/kubernetes/base/trade-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trade-service
  namespace: nexus-prod
  labels:
    app: trade-service
    version: v1
    app.kubernetes.io/component: microservice
    app.kubernetes.io/part-of: nexustreasury
spec:
  replicas: 3
  selector:
    matchLabels:
      app: trade-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: trade-service
        version: v1
      annotations:
        vault.hashicorp.com/agent-inject: 'true'
        vault.hashicorp.com/role: 'trade-service'
        vault.hashicorp.com/agent-inject-secret-db: 'database/creds/trade-service'
        prometheus.io/scrape: 'true'
        prometheus.io/port: '9090'
        prometheus.io/path: '/metrics'
    spec:
      serviceAccountName: trade-service
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001
        seccompProfile:
          type: RuntimeDefault
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: trade-service
      containers:
        - name: trade-service
          image: ghcr.io/manassehkafoh/nexustreasury/trade-service:latest
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
          ports:
            - name: http
              containerPort: 4001
            - name: metrics
              containerPort: 9090
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /health/live
              port: 4001
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 4001
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /health/startup
              port: 4001
            failureThreshold: 30
            periodSeconds: 5
          volumeMounts:
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: tmp
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: trade-service
  namespace: nexus-prod
spec:
  selector:
    app: trade-service
  ports:
    - name: http
      port: 80
      targetPort: 4001
    - name: metrics
      port: 9090
      targetPort: 9090
